# Mitiphy-Lite

./: .editorconfig  .gitattributes  .gitignore  AUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-LITE.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/attck/: techniques.json
mitiphy/: __init__.py  cli.py
mitiphy/audit/: __init__.py  chain.py
mitiphy/brain/: __init__.py  planner.py
mitiphy/collectors/: __init__.py  http.py
mitiphy/collectors/feeds/: __init__.py  epss.py  kev.py  osv.py
mitiphy/collectors/identity/: __init__.py  hibp.py
mitiphy/collectors/passive/: __init__.py  crtsh.py  dns.py  rdap.py  wayback.py
mitiphy/core/: __init__.py  bus.py  config.py  observation.py  plugin.py  target.py
mitiphy/enrich/: __init__.py  attck.py  reputation.py
mitiphy/frontends/: __init__.py  api.py  tui.py
mitiphy/llm/: __init__.py  base.py
mitiphy/ops/: __init__.py  demo.py  doctor.py  orchestrator.py  wizard.py
mitiphy/report/: __init__.py  renderer.py
mitiphy/report/templates/: report.html.j2
mitiphy/safety/: __init__.py  aup.py  consent.py  quota.py
mitiphy/score/: __init__.py  scorer.py
tests/: conftest.py  test_api.py  test_audit_chain.py  test_bus.py  test_demo_and_doctor.py  test_enricher.py  test_orchestrator.py  test_plugin_discovery.py  test_quota.py  test_reporter.py  test_safety.py  test_scorer.py  test_target.py
web/static/: index.html
