[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mitiphy"
version = "0.1.0"
description = "Free, self-hosted, AI-driven OSINT + threat-intelligence platform (Lite profile)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mitiphy contributors" }]
keywords = ["osint", "threat-intelligence", "security", "self-hosted", "cti"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "tldextract>=5.1",
    "structlog>=24.1",
    "platformdirs>=4.2",
    "anyio>=4.3",
]

[project.optional-dependencies]
llm = ["llama-cpp-python>=0.2.79"]
pdf = ["weasyprint>=62.0"]
graph = ["kuzu>=0.4"]
vectors = ["lancedb>=0.6", "sentence-transformers>=2.7"]
identity = [
    "holehe>=1.61",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
    "vcrpy>=6.0",
    "respx>=0.21",
]
all = [
    "mitiphy[llm,pdf,graph,vectors,identity]",
]

[project.scripts]
mitiphy = "mitiphy.cli:app"

[project.entry-points."mitiphy.collectors"]
hibp = "mitiphy.collectors.identity.hibp:HIBPCollector"
crt = "mitiphy.collectors.passive.crtsh:CrtShCollector"
wayback = "mitiphy.collectors.passive.wayback:WaybackCollector"
dns = "mitiphy.collectors.passive.dns:DNSCollector"
rdap = "mitiphy.collectors.passive.rdap:RDAPCollector"
kev = "mitiphy.collectors.feeds.kev:KEVCollector"
epss = "mitiphy.collectors.feeds.epss:EPSSCollector"
osv = "mitiphy.collectors.feeds.osv:OSVCollector"

[project.urls]
Homepage = "https://github.com/mitiphy/mitiphy"
Issues = "https://github.com/mitiphy/mitiphy/issues"
Documentation = "https://github.com/mitiphy/mitiphy#readme"

[tool.hatch.build.targets.wheel]
packages = ["mitiphy"]

[tool.hatch.build.targets.wheel.force-include]
"data/attck" = "mitiphy/data/attck"
"data/fixtures" = "mitiphy/data/fixtures"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "S", "RUF"]
ignore = [
    "S101",    # assert (used in tests)
    "S603",    # subprocess call (false positive for our shape)
    "S607",    # partial path (same)
    "S105",    # hardcoded password string (false positives)
    "S106",    # hardcoded password func arg (false positives)
    "S110",    # try/except/pass (used intentionally for best-effort branches)
    "S112",    # try/except/continue (same)
    "S311",    # pseudo-random (not used for crypto)
    "S324",    # hashlib MD5/SHA1 — we accept md5/sha1 hashes as targets and use SHA-1 for HIBP k-anon (HIBP's own API requires SHA-1)
    "BLE001",  # broad except (used for fail-soft collectors; we surface as Observation kind="error")
    "RUF012",  # mutable class default — Collector ABC uses class attrs by design
    "E501",    # line too long (handled by formatter)
    "B904",    # raise without `from` (typer.Exit pattern)
    "UP042",   # StrEnum requires py3.11+; we use (str, Enum) for max-compat readability
    "S113",    # httpx timeout=None (intentional for LLM streaming)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B", "BLE001", "RUF"]
"mitiphy/collectors/*" = ["BLE001"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
